sending instructions along with question, instead of setup